@@ -56,7 +56,7 @@
 #include "wpcsam.h"
 #include "sim.h"
 
-#define GP_SOLSMOOTH       2 /* Smooth the Solenoids over this numer of VBLANKS */
+#define GP_SOLSMOOTH       2 /* Smooth the Solenoids over this number of VBLANKS */
 #define GP_LAMPSMOOTH      2 /* Smooth the lamps over this number of VBLANKS */
 #define GP_DISPLAYSMOOTH   2 /* Smooth the display over this number of VBLANKS */
 
